# snipd

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
snipd/: __init__.py  cli.py  constants.py  db.py  models.py
tests/: test_cli.py  test_models.py
