[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "snipd"
version = "0.1.0"
description = "The missing CLI for developers tired of Googling the same boilerplate."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "click>=8.1",
    "rich>=13.7",
    "pyperclip>=1.8",
]

[project.scripts]
snipd = "snipd.cli:cli"

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-cov>=5.0"]

[tool.pytest.ini_options]
testpaths = ["tests"]
